use Arrays.asList instead of List.of so that code is compilable with a java 8 jdk